...
                        <connections>
                            <outlet property="dataSource" destination="ncG-6f-eba" id="sfK-fy-mW4"/>
                            <outlet property="delegate" destination="ncG-6f-eba" id="EK1-6p-xgC"/>
                        </connections>
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Reading List" id="eoi-GZ-Rex"/>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="VeP-84-7rC">
                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <connections>
                            <action selector="refresh:" destination="ncG-6f-eba" eventType="valueChanged" id="l22-a6-J0F"/>
...
                        <outlet property="deleteButton" destination="hix-h4-Avc" id="6Zo-Vz-5Cs"/>
                        <outlet property="editButton" destination="Jil-5P-fPE" id="HNl-rh-rmc"/>
                        <outlet property="searchButton" destination="oNB-uh-pjh" id="Mm2-XB-QlG"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ZE5-JI-4IV" userLabel="First Responder" sceneMemberID="firstResponder"/>
                <barButtonItem image="search" id="oNB-uh-pjh">
                    <connections>
                        <action selector="searchButtonTapped:" destination="ncG-6f-eba" id="6rL-4j-Vua"/>
                    </connections>
                </barButtonItem>
                <barButtonItem title="Edit" id="Jil-5P-fPE">
                    <connections>
                        <action selector="editAction:" destination="ncG-6f-eba" id="gxX-Dr-qnP"/>
                    </connections>
                </barButtonItem>
                <barButtonItem title="Cancel" id="5hw-Ot-kKN">
                    <connections>
                        <action selector="cancelAction:" destination="ncG-6f-eba" id="dX0-Tq-vWK"/>
                    </connections>
                </barButtonItem>
                <barButtonItem title="Delete" id="hix-h4-Avc">
                    <connections>
...
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Right-60" translatesAutoresizingMaskIntoConstraints="NO" id="F7f-dV-Gq6">
                                <rect key="frame" x="246" y="95" width="30" height="30"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="113" placeholderIntrinsicHeight="46" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rbf-r0-LIp">
                                <rect key="frame" x="131" y="361" width="113" height="286"/>
                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                <state key="normal" title="Continue">
                                    <color key="titleColor" red="0.94454064461281984" green="0.95840548345961485" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="continueButtonTapped:" destination="ucA-Ns-72k" eventType="touchUpInside" id="qQ8-EA-9fZ"/>
                                </connections>
                            </button>
...
                                                </label>
                                            </subviews>
                                        </tableViewCellContentView>
                                    </tableViewCell>
                                </cells>
                            </tableViewSection>
                            <tableViewSection headerTitle="About" footerTitle="Incognito Reader 1.3 -  © 2019 Noizy" id="3kx-1D-exP">
                                <cells>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="ZDx-yl-zn9" style="IBUITableViewCellStyleDefault" id="yZj-Qs-0wG">
                                        <rect key="frame" x="0.0" y="314.5" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="yZj-Qs-0wG" id="Bz3-t4-Wgh">
                                            <rect key="frame" x="0.0" y="0.0" width="341" height="43.5"/>
...
