...
                                        <nil key="title"/>
                                        <barButtonItem key="leftBarButtonItem" title="Done" id="Lji-e3-goT">
                                            <connections>
                                                <action selector="done" destination="ezL-cF-LdW" id="Idh-8W-wQn"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Read Later" id="abO-4b-Y7w">
                                            <connections>
                                                <action selector="saveURL" destination="ezL-cF-LdW" id="vSf-tX-DuP"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
...
